smallslive/static/sass/layout/_footer.scss
footer {
  margin-top: 27px;
  font-size: 12px;
}

footer a {
  color: #121212;
}

footer a:hover {
  color: rgba(0, 0, 0, 0.6);
  text-decoration: none;
}

.footer-content {
  text-align: center;
  width: 100%;
}

.footer-logo {
  color: #0044cc;
}

.footer-nav {
  margin: 23px 10px 15px;
  padding: 0;

  & a {
    font-weight: bolder;
  }
}

.footer-nav li {
  display: inline;
}

.footer-nav li:after {
  content: " \00b7";
  font-size: 15px;
}

.footer-nav li:last-child:after {
  content: none;
 }

